# mashpit

./: .gitattributes  .gitignore  .travis.yml  CITATION.cff  CONTRIBUTING.md  Makefile.PL  README.md  add_from_local.py  create_db.py  mash_distance.py  mashpit.py  metadata_db.py  metadata_sra_db.py  pyproject.toml  query_against_db.py  requirements.txt  setup.py  sketch_db.py
.github/workflows/: draft-pdf.yml  network-tests.yml  python-app.yml  python-publish.yml
edirect/: README  archive-pubmed  asp-ls  bt-context.txt  bt-link  bt-load  bt-save  bt-srch  build.sh  common.go  download-ncbi-data  eaddress  eblast  ecitmatch  econtact  edirect.pl  efetch  efilter  einfo  elink  enotify  epost  eproxy  esample  esearch  espell  esummary  exclude-uid-lists  expand-current  fetch-extras  fetch-pubmed  ftp-cp  ftp-ls  gbf2xml  index-extras  index-pubmed  intersect-uid-lists  j2x.go  nquire  phrase-search  (+24 more)
edirect.docker/: efetch  elink  esearch  esummary
lib/: Mashpit.pm  mashpit.sh  mashpit_init.sql  sqlite.sh
mashpit/: __init__.py  build.py  config.py  create.py  mashpit.py  metadata.py  query.py  sketch.py  split.py  update.py  webserver.py
mashpit/templates/: base.html  loading.html  result.html
mashpit/test/: PDG000000040.52.metadata.tsv  PDG000000040.52.reference_target.all_isolates.tsv  expected_query_output.csv  expected_test.sig  test.metadata.tsv  test.py  test.reference_target.SNP_distances.tsv  test_biosample_list.txt  test_build.py  test_config.py  test_create.py  test_list  test_metadata.py  test_query.py  test_sketch.py  unittest.py
paper/: paper.bib  paper.md
scripts/: addFromNCbi.sh  addFromNcbi.pl  addFromNcbi.sh  addLocal.sh  create_db.py  findClosest.sh  mashpit.sql  mashpit_init.sql  metadata_sra_db.py  query_against_db.py  sketch_db.py
src/mashpit/: __init__.py  build.py  gui.py  mashpit.py  query.py  streamlit_app.py  update.py  webserver.py
src/mashpit/templates/: upload.html
t/: 01_makedatabase.sh  01_makedatabase.t  02_10biosamples.sh  02_oneBiosample.sh  02_oneBiosample.t  03_fiveBiosamples.sh  10_confirmData.sh
t/data/: biosamples.txt
test/: biosample_list.txt  project_list.txt  test.py  test.reference_target.SNP_distances.tsv  test_real_cluster.tsv  test_real_metadata.tsv
test/test_trees/: PDS000110997.1.newick  PDS000111058.1.newick
tests/: distance.csv  local_info_example.txt  local_srr_example  test.sh  test_create_db.py  test_metadata_sra_db.py  test_query_against_db.py  test_sketch_db.py
