[build-system]
requires = ["setuptools ~= 75.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = 'mashpit'
version = '0.9.10'
description = 'A sketch-based surveillance platform'
authors = [
    {name = "Tongzhou Xu", email = "tongzhou.xu@uga.edu"}
]
license = {file = "LICENSE"}
keywords = ["sourmash","surveillance","pathogen"]
requires-python = ">=3.8"
readme = "README.md"

dependencies = [
    "sourmash ~= 4.6.1",
    "pandas ~= 2.0.3",
    "numpy ~= 1.24.4",
    "biopython ~= 1.83",
    "scikit-bio ~= 0.6.2",
    "tqdm ~= 4.67.0",
    "flask ~= 3.0.3",
    "dask[dataframe] ~= 2023.5.0",
    "psutil ~= 6.1.0",
    "phytreeviz ~= 0.2.0"
]

[project.scripts]
mashpit = "mashpit.mashpit:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mashpit = ["static/*", "templates/*"]