[build-system]
requires = ["setuptools ~= 75.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = 'mashpit'
version = '0.9.10'
description = 'A sketch-based surveillance platform'
authors = [
    {name = "Tongzhou Xu", email = "tongzhou.xu@uga.edu"}
]
license = {file = "LICENSE"}
keywords = ["sourmash","surveillance","pathogen"]
requires-python = ">=3.8,<3.12"
readme = "README.md"

dependencies = [
    "sourmash ~= 4.6.1",
    # sourmash pulls in screed unpinned; screed >=1.1.3 dropped its wheel and
    # only ships an sdist whose old setuptools_scm build backend needs
    # pkg_resources, which recent setuptools no longer provides, breaking
    # `pip install .` on a clean environment. Pin to the last version with a
    # working wheel until screed publishes one again.
    "screed >=1.0.5,<1.1.3",
    "pandas ~= 2.0.3",
    "numpy ~= 1.24.4",
    "biopython ~= 1.83",
    "scikit-bio ~= 0.6.2",
    "tqdm ~= 4.67.0",
    "phytreeviz ~= 0.2.0",
    "streamlit ~= 1.40.1"
]

[project.scripts]
mashpit = "mashpit.mashpit:main"

[tool.setuptools.packages.find]
where = ["src"]